--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,9 +228,73 @@ img {
   padding:0 1em;
 }
 
-.nutritiontips {
-  .paragraph {
-    width: 200px;
-  }
-  display: block;
+
+//nutritiontips
+
+
+article img{
+  float: left;
+  max-width: 20%;
+   }
+
+.group:after {
+	content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+//services
+
+// @import "compass/css3";
+
+// Make sure you have this in your styles
+// because grid is using paddings
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+// This is mixin which you will include in parent
+// of columns. It kills default margin of inline-block
+// elements.
+@mixin row () {
+  font-size: 0;
+}
+
+// This is column mixins.
+@mixin col ($col, $sum, $gap: 1em, $align: top, $first: false, $last: false) {
+    width: 100%;
+    display: inline-block;
+    font-size: 16px;
+    padding-left: if($first, 0, $gap);
+    padding-right: if($last, 0, $gap);
+
+    @media only screen and (min-width: 768px) {
+            width: percentage($col/$sum);
+            vertical-align: $align;
+    }
+
+    &.fluid { width: percentage($col/$sum); }
+}
+
+h2 { margin-top: 0; }
+
+.features, .products, .compare {
+  @include row;
+  margin-bottom: 50px;
+}
+
+.features article {
+  @include col(1, 3);
+}
+
+.products article {
+  background: #eee;
+  @include col(1, 3, $align: middle);
+}
+
+.compare article {
+  @include col(1, 2);
 }
