--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -5,10 +5,23 @@
   <title></title>
 </head>
 <body>
+
+  <section>
+    <article class="group"><img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
+      <p>
+        Organic Vs. Conventional Fruits and Vegetables
+        Buying organic reduces pollution of the air, water and soil
+        and also decreases the pollution on the food you eat. Peaches,
+        apples and bell peppers top the list of the fruits/vegetables with
+        the most pesticide residue. Read Kay's article about this.
+      </p>
+    </article>
+  </section
+
   <div class="nutritiontips">
 
   <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
-  <div class="paragraph">
+
   <p>
     Organic Vs. Conventional Fruits and Vegetables
     Buying organic reduces pollution of the air, water and soil
@@ -16,19 +29,17 @@
     apples and bell peppers top the list of the fruits/vegetables with
     the most pesticide residue. Read Kay's article about this.
   </p>
-</div>
 
   <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" />
-  <div class="paragraph">
+
   <p>
     Frugal and Healthy Eating
     Believe it or not, there are plenty of ways that you can eat healthy
     and be frugal at the same time. Even if you are in a rush, food can be
     prepared quickly and in a way that nourishes you. Read Kay's article about this.
   </p>
-</div>
   <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" />
-  <div class="paragraph">
+
   <p>
     Omega 3 Fatty Acids
     Yes, omega 3 fatty acids are the healthy fats and fish is great source
@@ -36,7 +47,6 @@
     forms of omega 3? There's DHA/EPA and ALA--which is found in certain seeds, grains,
     and nuts.
   </p>
-</div>
   </div>
 </body>
 </html>
