--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -5,63 +5,62 @@
     <title></title>
   </head>
   <body>
-    <div class="services">
-      <div class="section">
-    <p>
-      Essential Nutrition is a participating provider with the insurance
-      companies listed below. We suggest you call your insurance company to
-      find out if nutrition counseling is covered in your plan. Please call or
-      email us to get more information about cost.
-    </p>
-    <li>Blue Cross Blue Shield</li>
-    <li>Duke Basic/Duke Select</li>
-    <li>Coventry</li>
-  </div>
-    <div class="section">
-    <p>
-      Essential Nutrition works with adults, children, teens and families.
-      We believe that food and eating are important parts of our lives and should
-      be enjoyed but should not generally rule or control us. For most people,
-      healthy eating can be flexible.
-    </p>
-  </div>
-    <div class="section">
-      <p>
-        Services include
-      </p>
-      <li>Individual or Group Counseling</li>
-      <li>Wellness Coaching</li>
-      <li>Grocery Store Tours</li>
-    </div>
-    <div class="section">
-      <p>
-        Below are some of the more common nutrition issues that we have helped.
-      </p>
+    <div class="features">
+      <article>
+        <p>
+          Essential Nutrition is a participating provider with the insurance
+          companies listed below. We suggest you call your insurance company to
+          find out if nutrition counseling is covered in your plan. Please call or
+          email us to get more information about cost.
+          <li>Blue Cross Blue Shield</li>
+          <li>Duke Basic/Duke Select</li>
+          <li>Coventry</li>
+        </p>
+      </article>
 
-      <li>Weight Management</li>
-        <ul class="margins">Achieve a healthier weight without deprivation.</ul>
-      <li>Eating Disorders (Anorexia, Bulimia, Binge Eating Disorder, and others not specified)</li>
-        <ul class="margins">Normalize eating and develop a healthy relationship with food.</ul>
-      <li>Cholesterol</li>
-        <ul class="margins">Lower your blood cholesterol and improve your lipid profile.</ul>
-      <li>High Blood Pressure</li>
-        <ul class="margins">Improve your blood pressure and lower your risk of stroke and heart disease through improved nutritional choices</ul>
-      <li>Diabetes</li>
-        <ul class="margins">Improve your blood sugar management through carbohydrate counting, exchange lists or meal plans</ul>
-      <li>Athletic Performance</li>
-        <ul class="margins">Enhance your endurance for training and competition</ul>
-      <li>Osteoporosis</li>
-        <ul class="margins">Optimize your bone health by assuring an intake of adequate nutrients</ul>
-      <li>Cancer</li>
-        <ul class="margins">Decrease your risk or get help managing symptoms of cancer and its treatments</ul>
-      <li>Family Meals</li>
-        <ul class="margins">Help your family to be healthy, happy eaters who enjoy food and meals</ul>
-      <li>Digestion/Absorption</li>
-        <ul class="margins">Food intolerances, irritable bowel syndrome, inflammatory bowel disease, celiac disease. Specializing in FODMAP elimination</ul>
-      <li>Enteral and Parenteral Nutrition</li>
-        <ul class="margins">Support for patients on nutritional support</ul>
-    </div>
-  </div>
+      <article>
+        <p>
+          Below are some of the more common nutrition issues that we have helped.
+          <li>Weight Management</li>
+            <ul>Achieve a healthier weight without deprivation.</ul>
+          <li>Eating Disorders</li>
+            <ul>Normalize eating and develop a healthy relationship with food.</ul>
+          <li>Cholesterol</li>
+            <ul>Lower your blood cholesterol and improve your lipid profile.</ul>
+          <li>High Blood Pressure</li>
+            <ul>Improve your blood pressure and lower your risk of stroke and heart disease through improved nutritional choices</ul>
+          <li>Diabetes</li>
+            <ul>Improve your blood sugar management through carbohydrate counting, exchange lists or meal plans</ul>
+          <li>Athletic Performance</li>
+            <ul>Enhance your endurance for training and competition</ul>
+          <li>Osteoporosis</li>
+            <ul>Optimize your bone health by assuring an intake of adequate nutrients</ul>
+          <li>Cancer</li>
+            <ul>Decrease your risk or get help managing symptoms of cancer and its treatments</ul>
+          <li>Family Meals</li>
+            <ul>Help your family to be healthy, happy eaters who enjoy food and meals</ul>
+          <li>Digestion/Absorption</li>
+            <ul>Food intolerances, irritable bowel syndrome, inflammatory bowel disease, celiac disease. Specializing in FODMAP elimination</ul>
+          <li>Enteral and Parenteral Nutrition</li>
+            <ul>Support for patients on nutritional support</ul>
+        </p>
+      </article>
+      <article>
+        <p>
+          Essential Nutrition works with adults, children, teens and families.
+          We believe that food and eating are important parts of our lives and should
+          be enjoyed but should not generally rule or control us. For most people,
+          healthy eating can be flexible.
+        </p>
+        <p>
+          Services include
+          <li>Individual or Group Counseling</li>
+          <li>Wellness Coaching</li>
+          <li>Grocery Store Tours</li>
+        </p>
+      </article>
 
+
+    </div>
   </body>
 </html>
